crates/musa/tests/snapshots/cli__claim-out-of-scale.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
unmet-claim

  × `f#4` is not in scale c major
    ╭─[examples/broken/claim-out-of-scale.musa:7:17]
  6 │                 voice line {
  7 │ ╭─▶                 assert pitches_in(scale c major) {
  8 │ │                       c4/4 d4/4 f#4/4 g4/4
    · │                                 ──┬──
    · │                                   ╰── this note leaves the collection
  9 │ ├─▶                 }
    · ╰──── the passage claims every note is in it
 10 │                 }
    ╰────
  help: scale c major is spelled c d e f g a b

  note: the note is reported, never respelled: an enharmonic neighbour is a different written pitch

1 problem (1 error)
