crates/musa/tests/snapshots/cli__claim-parallel-fifths.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
unmet-claim

  × the lowest and second voices move in parallel P5s
    ╭─[examples/broken/claim-parallel-fifths.musa:8:17]
  7 │                 voice v {
  8 │ ╭─▶                 assert follows(satb_parallel_perfects) {
  9 │ │                       [c3 g3 c4 e4]/1
 10 │ │                       [d3 a3 d4 f4]/1
    · │                       ───────┬───────
    · │                              ╰── both voices move, from `c3` and `g3`
 11 │ ├─▶                 }
    · ╰──── `follows(satb_parallel_perfects)` is the claim
 12 │                 }
    ╰────

  note: OMT 022 §Parallels: no two voices move in parallel fifths, octaves, or unisons

1 problem (1 error)
