crates/musa/tests/snapshots/cli__claim-wrong-voice-count.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
unmet-claim

  × 3 notes sound here, and the passage claims 4
    ╭─[examples/broken/claim-wrong-voice-count.musa:7:17]
  6 │                 voice v {
  7 │ ╭─▶                 assert voices(4) {
  8 │ │                       [c3 g3 c4 e4]/2
  9 │ │                       [c3 g3 c4]/2
    · │                       ──────┬─────
    · │                             ╰── sounding from here
 10 │ ├─▶                 }
    · ╰──── `voices(4)` is the claim
 11 │                 }
    ╰────
  help: this is 1/2 into the passage

  note: silence is not counted: a moment where nothing sounds is no voices, not a wrong number of them

1 problem (1 error)
