crates/musa/tests/snapshots/cli__declared-twice.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
duplicate-name

  × `rise` is declared twice in this document
   ╭─[examples/broken/declared-twice.musa:4:5]
 3 │ 
 4 │     motif rise() { c5/8 d5/8 }
   ·     ─────────────┬────────────
   ·                  ╰── first declared here
 5 │     motif rise() { e5/8 f5/8 }
   ·     ─────────────┬────────────
   ·                  ╰── declared again here
 6 │ 
   ╰────
  help: give one of them another name

  note: musa has no shadowing: a name means one thing everywhere the piece can see it

1 problem (1 error)
