crates/musa/tests/snapshots/cli__ending-outside-repeat.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
misplaced

  × an ending belongs to a repeat
    ╭─[examples/broken/ending-outside-repeat.musa:12:17]
 11 │                     | c4/4 d4/4 e4/4 f4/4
 12 │ ╭─▶                 ending 1 {
 13 │ │                       | g4/1
 14 │ ├─▶                 }
    · ╰──── no `repeat` encloses this
 15 │                 }
    ╰────
  help: put the passage in `repeat 2 { … }` and this ending at the end of it

  note: an ending says which pass to play, and outside a repeat there is only one pass

1 problem (1 error)
