crates/musa/tests/snapshots/cli__ending-past-the-count.snap
---
source: crates/musa/tests/cli.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
misplaced

  × this repeat never reaches pass 3
    ╭─[examples/broken/ending-past-the-count.musa:19:28]
 18 │                     }
 19 │                     ending 3 {
    ·                            ┬
    ·                            ╰── no pass plays this
 20 │                         | b4/1
    ╰────
  help: write `repeat 3`, or delete this ending

1 problem (1 error)
